	RFC 3986 and 2616.  Reported by Alex Broens.

   !	Updated uri.txt to clarify some test cases; also add Alex Broens
	"http:/" spam example.

   !	Minor change to playfair CLI to use getopt().

   !	Refactored DebugMalloc pthread support. Should now detect memory
	leaks per thread.

   !	Updated IANA TLD list.

   +	Added binary search tree API.

--1.75.22--

   *    Upgraded SQLite to 3.7.17

   !	Fixed socket3_connect() handling of ECONNREFUSED, particularly
	so that connections to a host with both an AAAA and A records
	ie. localhost where a service isn't available on IPv6, then
	falls back to the IPv4.

   !	Fixed secho CLI to work with IMAP STARTTLS and handling lengthy
	replies from POP and IMAP commands, such as LIST, UIDL, LSUB,
	etc.

   !	Fixed show tool's handling of -f follow option and removed old
   	UNBUFFERED code blocks in favour of stdio. Apply similar -f
	fixes to sift tool.

   !	Prelimiary and untested code for sift -C option.

   !	Fix SPF bug where two or more SPF (TXT) records must return
	PermError.  Reported by Steve Freegard.

		spf 147.143.7.63 bangor.ac.uk

	The SPF test incorrectly toggles between returning Pass and Fail,
	because bangor.ac.uk has 2 SPF TXT records. The correct answer is
	PermError.

	RFC 4408 section 3.1.3 talks about multiple strings in a TXT
	record.  Section 4.5 covers selecting records:

		If there are two or more records remaining, then check_host()
		exits immediately with the result of "PermError".


--1.75.21--

   *    Upgraded SQLite to 3.7.16.1

   !    Fix spfCheck() double free of target introduced in 1.75.20. Also
	simplified spfMacro() to always return a malloc'd string, instead
	of either malloc'd string or domain argument.

--1.75.20--

   *    Upgraded SQLite to 3.7.15.2

  !!	Fix seg.fault in SPF for IP or mail/domain parsing error.

   !	When an alternate SPF TXT recorded is supplied, then the default
   	result should be Neutral, instead of None. eg. -t "v=spf1"
