@@ -323,6 +323,11 @@ typedef unsigned long time_t;
 #undef HAVE_PTHREAD_RWLOCK_WRLOCK
 #undef HAVE_PTHREAD_RWLOCK_TRYRDLOCK
 #undef HAVE_PTHREAD_RWLOCK_TRYWRLOCK
+#undef HAVE_PTHREAD_SPIN_INIT
+#undef HAVE_PTHREAD_SPIN_DESTROY
+#undef HAVE_PTHREAD_SPIN_LOCK
+#undef HAVE_PTHREAD_SPIN_TRYLOCK
+#undef HAVE_PTHREAD_SPIN_UNLOCK
 #undef HAVE_PTHREAD_LOCK_GLOBAL_NP
 #undef HAVE_PTHREAD_UNLOCK_GLOBAL_NP
 #undef HAVE_PTHREAD_COND_BROADCAST
